<?xml version="1.0" encoding="utf-8"?>
<!--TODO: replace root by FrameLayout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A4B4B"
    tools:context=".EditActivity2">

    <!--TODO: remove-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/edd_title_hint"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHighlight="#5E5959"
        android:textColorHint="#5E5959"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageLayout" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edd_dick_hint"
        android:inputType="text|textMultiLine"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHighlight="#5E5959"
        android:textColorHint="#5E5959"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bitnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="#848C29"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:rippleColor="#5A02F6"
        app:srcCompat="@drawable/baseline_save_alt_24" />

    <!--TODO: remove-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bitnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/to"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/bitnSave"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:srcCompat="@drawable/baseline_image_24" />

    <!--TODO: remove-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ImageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bitnRedactor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:contentDescription="@string/pop"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageAvatar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bitnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/oi"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--FIXME: warnings-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bitn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bitnImage"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <!--TODO: move text to resources-->
    <EditText
        android:id="@+id/editTextData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Дата"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#1E1E1E"
        android:textColorHint="#534545"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
